# ekg-maturity

./: .actrc  .devcontainerignore  .doc-name-root  .env  .gitignore  .latexmkrc  .markdownlint.json  .prettierrc.json  .tool-versions  20201217_EKGF:MM Template for Documentation and Content Issues .docx  404.html  CLAUDE.md  CNAME  LICENSE  Makefile  Pipfile  README.adoc  README.md  a-3-business-enablers-1-operating-model.tex  abbreviations.md  acronyms.tex  act.sh  bibliography.bib  build-all.sh  build.sh  clean.sh  commitlint.config.js  convert-latex-markdown.sh  convert_latex_markdown.sh  ekg-manifesto  etc  generate_maturity_model.py  glossary-business.tex  glossary-concepts.tex  glossary-ekg.tex  glossary-main.tex  glossary-ontologies.tex  glossary.tex  index.html  install-as-subtree.sh  (+9 more)
.cursor/rules/: git-rules.mdc  markdown-formatting.mdc  (+1 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: COMMIT_CONVENTION.md  CONTRIBUTING.md  FUNDING.yml  dependabot.yml  labeler.yml
about/: index.html
appendix/: index.html
article/: index.html
background-and-intro/: index.html
content/: main.tex
customer-assets/: .gitignore  README.md
docs/: .gitignore  .pages.yaml  background-and-intro.md  contributors.md  generate_maturity_model.py  index.md  main.py  pdf.md
docs-overrides/: main.html
ekg-manifesto/: ekg-manifesto.tex
ekg-mm/: README.md  business-pillar.ttl  data-pillar.ttl  ekg-mm-appendices.tex  ekg-mm-capabilities.tex  ekg-mm-vars.tex  ekg-mm.tex  model.ttl  organization-pillar.ttl
etc/: agnos-keywords.sty  bibliography-stuff.sty  bios-core-preamble.sty  bios-font-stuff.sty  bios-other-packages.sty  customer-assets.sty  font-stuff.sty  glossary-stuff.sty  header-and-footer-stuff-somecust.sty  header-and-footer-stuff.sty  header-stuff.sty  index-stuff.sty  label-stuff.sty  link-stuff.sty  listing-stuff.sty  maturity-model-stuff.sty  paper-stuff.sty  path-stuff.sty  picture-stuff.sty  release-stuff.sty  tikz-stuff.sty  title-page.tex  todo-stuff.sty  use-case-standalone.cls  use-case-stuff.sty  use-case-subfile.sty  user-story-stuff.sty  whitepaper-style-doc.cls
images/: by.pdf_tex
intro/: index.html
javascripts/: darkable-objects.js
latex-lib/: .gitignore  .latexmkrc  README.adoc  acronyms.tex  act.sh  bibliography.bib  build.sh  clean.sh  glossary-ekg.tex  glossary-main.tex  install-as-subtree.sh
metadata/: 0-model.ttl  a-1-business-strategy-actuation.ttl  a-2-business-model-elaboration.ttl  a-3-business-enablers.ttl  a-business-pillar.ttl  b-1-executive-leadership.ttl  b-2-product-ownership.ttl  b-3-delivery-management.ttl  b-4-organizational-culture.ttl  b-5-organizational-capabilities.ttl  b-organization-pillar.ttl  business-pillar.ttl  c-1-data-strategy.ttl  c-2-data-architecture.ttl  c-3-data-quality.ttl  c-4-data-governance.ttl  c-data-pillar.ttl  d-1-technology-strategy.ttl  d-2-technology-execution.ttl  d-3-user-interface.ttl  d-technology-pillar.ttl  data-pillar.ttl  maturity-model.ttl  model.ttl  organization-pillar.ttl  technology-pillar.ttl
old-latex-content/: .gitignore  maturity-model.ttl
other/: index.html
pdf/: index.html
pillar/: .pages.yaml  index.html
pillar-dev/: index.html
search/: search_index.json
site-test/: 404.html  sitemap.xml
stylesheets/: extra.css
(+2671 files in other folders)
