[project]
name = "ekg-maturity"
version = "1.0.2"
description = ""
authors = [
  {name = "Jacobus Geluk", email = "jacobus.geluk@ekgf.org"},
]
requires-python = ">=3.14.2"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "mkdocs-material",
  "mkdocs-build-plantuml-plugin",
  "mdutils",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-exclude",
  "mkdocs-exclude-search",
  "mkdocs-gen-files",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-graphviz",
  "mkdocs-include-markdown-plugin",
  "mkdocs-localsearch",
  "mkdocs-macros-plugin",
  "mkdocs-mermaid2-plugin",
  "mkdocs-minify-plugin",
  "mkdocs-redirects",
  "mkdocs-kroki-plugin",
  "mdx-spanner",
  "markdown-emdash",
  "smartypants",
  "pillow",
  "cairosvg",
  "ekglib @ git+https://github.com/EKGF/ekglib.git",
  "mkdocs-material-ekgf>=0.0.15",
]

[project.urls]
Homepage = "https://maturity.ekgf.org"
Repository = "https://github.com/EKGF/ekg-maturity"
