[project]
name = "ekg-maturity"
version = "1.0.2"
description = ""
authors = [
  {name = "Jacobus Geluk", email = "jacobus.geluk@ekgf.org"},
]
requires-python = ">=3.14.2"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "mkdocs-material",
  "mkdocs-build-plantuml-plugin",
  "mdutils",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-exclude",
  "mkdocs-exclude-search",
  "mkdocs-gen-files",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-graphviz",
  "mkdocs-include-markdown-plugin",
  "mkdocs-localsearch",
  "mkdocs-macros-plugin",
  "mkdocs-mermaid2-plugin",
  "mkdocs-minify-plugin",
  "mkdocs-redirects",
  "mdx-spanner",
  "markdown-emdash",
  "smartypants",
  "pillow",
  "cairosvg",
  "ekg-lib>=0.0.30",
  "mkdocs-material-ekgf>=0.0.20",
]

[tool.uv.sources]
# Use local development version - comment out for release
mkdocs-material-ekgf = { path = "../mkdocs-material-ekgf", editable = true }
ekg-lib = { path = "../ekg-lib", editable = true }

[project.urls]
Homepage = "https://maturity.ekgf.org"
Repository = "https://github.com/EKGF/ekg-maturity"
